# scientist

./: .gitignore  Cargo.toml  README.md
src/: LF_dataset.csv  bin.rs  lib.rs  linear.csv
src/arrays/: array.rs
src/globals/: constants.rs
src/math/: math.rs
src/metrics/: metric.rs  mod.rs
src/models/: linear.rs  mod.rs  model.rs
src/utils/: math.rs
